# ConwaysGameOfLife

./: Header.hpp  Planning.txt  main  main.cpp
MyProject/: CMakeLists.txt
MyProject/include/: Header.hpp
MyProject/src/: game.cpp  main.cpp
